[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/sprites/monochrome_tilemap_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/Key.gd" type="Script" id=2]
[ext_resource path="res://Assets/audio/sounds_effects/coin.wav" type="AudioStream" id=3]


[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 8.5 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 65, 16, 13 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 272, 65, 16, 13 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Key",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -29.95, -33.8884 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "bounce"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -29.95, -33.8884 ), Vector2( -29.9499, -89.8884 ), Vector2( -29.9499, -57.8884 ) ]
}

[node name="Key" type="Area2D"]
position = Vector2( 30, 34 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -30, -33.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.839216, 0.690196, 0.372549, 1 )
self_modulate = Color( 0.921569, 0.831373, 0.0784314, 1 )
position = Vector2( -29.95, -33.8884 )
scale = Vector2( 3.99375, 2.4787 )
frames = SubResource( 2 )
animation = "Key"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/bounce = SubResource( 7 )

[node name="collect_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -19.608

[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
